## Copyright (C) 1996-2023 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

SUBDIRS = apparmor helper-mux systemd sysvinit
EXTRA_DIST = helper-ok-dying.pl helper-ok.pl
