## Copyright (C) 1996-2016 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

DIST_SUBDIRS= \
	AD_group \
	delayer \
	eDirectory_userip \
	file_userip \
	kerberos_ldap_group \
	LDAP_group \
	LM_group \
	session \
	SQL_session \
	time_quota \
	unix_group \
	wbinfo_group

SUBDIRS=$(EXTERNAL_ACL_HELPERS)
