## Copyright (C) 1996-2016 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

## Alphabetical list of sub-directories to distribute with Squid:
DIST_SUBDIRS = \
	DB \
	file

SUBDIRS	= $(LOG_DAEMON_HELPERS)
EXTRA_DIST = modules.m4
