## Copyright (C) 1996-2017 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

DIST_SUBDIRS	= kerberos SSPI wrapper
SUBDIRS		= $(NEGOTIATE_AUTH_HELPERS)
