include $(top_srcdir)/src/Common.am

INCLUDES += -I$(top_srcdir)/lib

noinst_LTLIBRARIES = librfcnb.la

librfcnb_la_SOURCES = \
	byteorder.h \
	rfcnb.h \
	rfcnb-common.h \
	rfcnb-error.h \
	rfcnb-priv.h \
	rfcnb-util.h \
	rfcnb-io.h \
	rfcnb-io.c \
	rfcnb-util.c \
	rfcnb-util.h \
	session.c \
	std-includes.h
