## Copyright (C) 1996-2020 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

include $(top_srcdir)/src/Common.am

AM_CPPFLAGS += -I$(top_srcdir)/lib

noinst_LTLIBRARIES = librfcnb.la

librfcnb_la_SOURCES = \
	byteorder.h \
	rfcnb.h \
	rfcnb-common.h \
	rfcnb-error.h \
	rfcnb-priv.h \
	rfcnb-util.h \
	rfcnb-io.h \
	rfcnb-io.c \
	rfcnb-util.c \
	rfcnb-util.h \
	session.c \
	std-includes.h
