## Copyright (C) 1996-2022 The Squid Software Foundation and contributors
##
## Squid software is distributed under GPLv2+ license and includes
## contributions from numerous individuals and organizations.
## Please see the COPYING and CONTRIBUTORS files for details.
##

include $(top_srcdir)/src/Common.am

AM_CPPFLAGS += -I$(top_srcdir)/lib

noinst_LTLIBRARIES = librfcnb.la

librfcnb_la_SOURCES = \
	byteorder.h \
	rfcnb-common.h \
	rfcnb-error.h \
	rfcnb-io.c \
	rfcnb-io.h \
	rfcnb-priv.h \
	rfcnb-util.c \
	rfcnb-util.h \
	rfcnb.h \
	session.c \
	std-includes.h
